solves: Data List, Data Filter, Create Product

--- a/src/product/templates/products/create.html
+++ b/src/product/templates/products/create.html
@@ -8,6 +8,8 @@
         <a href="{% url 'product:create.product' %}" class="float-right btn btn-primary">All Product</a>
     </div>
 
+    <div id="csrf-token">{% csrf_token %}</div>
+
 
     <script>
     var varients = {{ variants|safe }}
