--- a/src/templates/backend/base.html
+++ b/src/templates/backend/base.html
@@ -20,6 +20,26 @@
             rel="stylesheet">
 
     <link href="{% static '/css/main.css' %}" rel="stylesheet">
+
+    <style>
+    .pagination {
+      display: inline-block;
+    }
+
+    .pagination a {
+      color: black;
+      float: left;
+      padding: 8px 16px;
+      text-decoration: none;
+    }
+
+    .pagination a.active {
+      background-color: #4CAF50;
+      color: white;
+    }
+
+    .pagination a:hover:not(.active) {background-color: #ddd;}
+    </style>
 </head>
 <body id="page-top">
 <div id="wrapper">
